--- a/Flex实现双飞翼布局/demo.css
+++ b/Flex实现双飞翼布局/demo.css
@@ -15,6 +15,9 @@ p{
     display: flex;      /* 对main进行flex布局,flex布局默认使用flex-direction:row,即横向布局形式 */
     min-height: 130px;
 }
+p {
+    font-size: 10px;
+}
 .header{
     width: 100%;
     height: 90px;
